bot/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carrot-bot
spec:
  selector:
    app: carrot-bot
  ports:
  - port: 80
    targetPort: 8080
