bot/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carrot-bot-ingress
  namespace: carrot
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    ingress.kubernetes.io/ssl-redirect: "false"
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: carrot-bot.carrot.abstract.money
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cm-acme-http-solver-lrbwn
            port:
              number: 8089
  tls:
  - hosts:
    - carrot-bot.carrot.abstract.money
    secretName: carrot-bot-cert
